--- a/css/style.css
+++ b/css/style.css
@@ -17,4 +17,46 @@
   font-family: 'Open Sans Semibold';
   src: url("../fonts/OpenSans-Semibold.ttf");
 }
+
+.header {
+  color: #212121;
+  padding: 20px 0;
+  background-color: #fff;
+}
+
+.header-logo {
+  font-family: 'Open Sans';
+  font-size: 25px;
+  font-weight: 700;
+  line-height: 22px;
+}
+
+.header-menu__item {
+  font-family: 'Open Sans - Semibold';
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 1px;
+  margin-left: 37px;
+}
+
+.header-menu__item a {
+  color: #212121;
+}
+
+.header-menu__item a:hover {
+  text-decoration: none;
+  color: #cccccc;
+}
+
+ul,
+li {
+  display: block;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: grey;
+}
 /*# sourceMappingURL=style.css.map */
