--- a/css/style.scss
+++ b/css/style.scss
@@ -1,1 +1,13 @@
 @import './adds/font';
+@import './blocks/header';
+
+ul,
+li {
+  display: block;
+  padding: 0;
+  margin: 0;
+}
+
+body {
+  background-color: grey;
+}
