add fix to section about us

--- a/css/blocks/_about.scss
+++ b/css/blocks/_about.scss
@@ -1,5 +1,5 @@
 .about {
-  color: black;
+  color: #212121;
   background-color: #fff;
   text-align: center;
   padding-top: 120px;
@@ -11,14 +11,21 @@
     font-weight: 700;
     line-height: 22px;
     letter-spacing: 1.5px;
+    margin-bottom: 36px;
   }
   &__text {
-    margin-top: 36px;
+    margin-bottom: 110px;
     color: #212121;
     font-family: 'Open Sans';
     font-size: 15px;
     font-weight: 400;
     line-height: 22px;
     letter-spacing: 0.75px;
+  }
+  &_h3 {
+    font-family: 'Open Sans Semibold';
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
   }
 }
