--- a/css/style.css
+++ b/css/style.css
@@ -103,7 +103,7 @@
   background-color: #fff;
   text-align: center;
   padding-top: 120px;
-  padding-bottom: 125px;
+  padding-bottom: 15px;
 }
 
 .about__title {
@@ -116,13 +116,12 @@
 }
 
 .about__text {
-  margin-bottom: 110px;
-  color: #212121;
   font-family: 'Open Sans';
   font-size: 15px;
   font-weight: 400;
   line-height: 22px;
   letter-spacing: 0.75px;
+  margin-bottom: 110px;
 }
 
 .about_h3 {
@@ -130,6 +129,64 @@
   font-size: 20px;
   margin-top: 30px;
   margin-bottom: 20px;
+}
+
+.services {
+  color: #212121;
+  text-align: center;
+  padding-top: 165px;
+  padding-bottom: 125px;
+  background-color: #e4fdf9;
+}
+
+.card {
+  background-color: #fff;
+  padding: 50px 20px 40px;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  margin-bottom: 30px;
+}
+
+.card__icon {
+  font-size: 60px;
+  color: black;
+}
+
+.card__btn {
+  width: 159px;
+  display: inline-block;
+  margin: 0 auto;
+  border: 2px solid #212121;
+  background: transparent;
+  font-family: 'Open Sans - Semibold';
+  font-size: 20px;
+  line-height: 22px;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 20px 14px;
+  cursor: pointer;
+}
+
+.card .about__text {
+  margin-bottom: 40px;
+}
+
+.card:hover {
+  -webkit-box-shadow: 0 10px 20px rgba(0, 0, 0, 0.35);
+          box-shadow: 0 10px 20px rgba(0, 0, 0, 0.35);
+  background-color: #00897b;
+  color: #fff;
+}
+
+.card:hover .card__icon {
+  color: white;
+}
+
+.card:hover .card__btn {
+  border-color: #fff;
+  color: #fff;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 ul,
