--- a/css/style.scss
+++ b/css/style.scss
@@ -4,6 +4,8 @@
 @import './blocks/buttons';
 @import './blocks/about';
 @import './blocks/services';
+@import './blocks/portfolio';
+@import './blocks/pricing';
 
 ul,
 li {
