--- a/css/blocks/_buttons.scss
+++ b/css/blocks/_buttons.scss
@@ -1,22 +1,21 @@
 .button {
+  cursor: pointer;
   padding: 10px 25px;
   margin: 0 10px;
   color: white;
   transition: 0.3s;
-  &_empty {
+  background-color: #00897b;
+  border: 3px solid #00897b;
+  text-transform: uppercase;
+  &:hover {
     border: 3px solid #f8f8f8;
     background: transparent;
+  }
+}
 
-    text-transform: uppercase;
-  }
-  &_full {
-    background-color: #00897b;
-    border: 3px solid #00897b;
-    text-transform: uppercase;
-  }
-  &_empty:hover,
-  &_full:hover {
-    border: 3px dotted white;
-    background-color: #02665c;
-  }
+.portfolio .button:hover,
+.focused {
+  color: black;
+  border: 3px solid #00897b;
+  background: transparent;
 }
