--- a/css/style.scss
+++ b/css/style.scss
@@ -6,6 +6,7 @@
 @import './blocks/services';
 @import './blocks/portfolio';
 @import './blocks/pricing';
+@import './blocks/_team.scss';
 
 ul,
 li {
