add section blog

--- a/css/blocks/_header.scss
+++ b/css/blocks/_header.scss
@@ -3,7 +3,7 @@
   padding: 20px 0;
   background-color: #fff;
   &-logo {
-    font-family: 'Open Sans Semibold';
+    font-family: 'Open Sans - Semibold';
     font-size: 25px;
     font-weight: 700;
     line-height: 22px;
