--- a/css/style.scss
+++ b/css/style.scss
@@ -7,6 +7,7 @@
 @import './blocks/portfolio';
 @import './blocks/pricing';
 @import './blocks/_team.scss';
+@import './blocks/_blog.scss';
 
 ul,
 li {
