add contact form and footer

--- a/css/blocks/_buttons.scss
+++ b/css/blocks/_buttons.scss
@@ -6,6 +6,8 @@
   transition: 0.3s;
   background-color: #00897b;
   border: 3px solid #00897b;
+  font-family: 'Roboto';
+  font-weight: bold;
   text-transform: uppercase;
   &:hover {
     border: 3px solid #f8f8f8;
