--- a/css/blocks/_pricing.scss
+++ b/css/blocks/_pricing.scss
@@ -45,7 +45,8 @@
         background: transparent;
         color: #212121;
         border: 1px solid #212121;
-        font-family: 'Open Sans - Semibold';
+        font-family: 'Roboto';
+
         text-transform: uppercase;
         font-size: 20px;
         width: 180px;
