--- a/css/blocks/_services.scss
+++ b/css/blocks/_services.scss
@@ -21,7 +21,7 @@
     margin: 0 auto;
     border: 2px solid #212121;
     background: transparent;
-    font-family: 'Open Sans - Semibold';
+    font-family: 'Roboto';
     font-size: 20px;
     line-height: 22px;
     text-transform: uppercase;
