--- a/css/style.scss
+++ b/css/style.scss
@@ -8,6 +8,7 @@
 @import './blocks/pricing';
 @import './blocks/_team.scss';
 @import './blocks/_blog.scss';
+@import './blocks/_footer.scss';
 
 ul,
 li {
