add adaptive for ipad

--- a/css/blocks/_footer.scss
+++ b/css/blocks/_footer.scss
@@ -1,7 +1,6 @@
 .footer {
   padding-top: 165px;
   padding-bottom: 125px;
-  max-height: 1300px;
   color: #fff;
   background: url(../img/footer.png) center center/cover no-repeat;
   text-align: center;
@@ -64,18 +63,17 @@
       opacity: 0.6;
     }
   }
-  &__rules {
-    height: 63px;
-    padding: 20px 0;
-    background-color: #fff;
-    color: #212121;
-    font-family: Roboto;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 22px;
-    letter-spacing: 1px;
-    margin: 0 auto;
-    text-align: center;
-    margin-top: 110px;
-  }
+}
+
+.footer__rules {
+  padding: 20px 0;
+  background-color: #fff;
+  color: #212121;
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 22px;
+  letter-spacing: 1px;
+  margin: 0 auto;
+  text-align: center;
 }
