--- a/css/blocks/_pricing.scss
+++ b/css/blocks/_pricing.scss
@@ -7,6 +7,7 @@
   .price {
     transition: 0.3s;
     background-color: #fff;
+    margin-bottom: 20px;
     &__head {
       padding-top: 40px;
       padding-bottom: 65px;
