--- a/css/style.scss
+++ b/css/style.scss
@@ -9,6 +9,7 @@
 @import './blocks/_team.scss';
 @import './blocks/_blog.scss';
 @import './blocks/_footer.scss';
+@import './blocks/_media.scss';
 
 ul,
 li {
@@ -19,4 +20,22 @@ li {
 
 body {
   font-family: 'Open Sans';
+}
+
+#toTop {
+  z-index: 999;
+  width: 40px;
+  height: 40px;
+  border: none;
+  font-size: 20px;
+  border-radius: 3px;
+  background: #00897b;
+  text-align: center;
+  padding: 5px;
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  cursor: pointer;
+  display: none;
+  color: #000;
 }
