--- a/css/blocks/_media.scss
+++ b/css/blocks/_media.scss
@@ -35,3 +35,84 @@
     }
   }
 }
+@media screen and (max-width: 480px) {
+  .main {
+    padding: 20px;
+    &__title {
+      font-size: 35px;
+    }
+    &__text {
+      margin-bottom: 20px;
+      font-size: 17px;
+    }
+    button {
+      margin-bottom: 15px;
+    }
+  }
+  .about,
+  .services,
+  .pricing,
+  .portfolio,
+  .team,
+  .footer,
+  .blog {
+    padding: 20px;
+    &__text {
+      margin-bottom: 20px;
+    }
+  }
+  .portfolio {
+    button {
+      margin-bottom: 15px;
+    }
+    .filter {
+      padding: 20px;
+    }
+  }
+  .team {
+    .multiple-items {
+      margin-top: 10px;
+      img {
+        max-width: 264px;
+      }
+      .dots-style {
+        margin-top: 10px;
+      }
+    }
+  }
+  .left,
+  .right {
+    flex-direction: column;
+  }
+  .blog {
+    width: 100%;
+    &__item {
+      width: 90%;
+
+      p {
+        width: 100%;
+      }
+    }
+    img {
+      max-width: 300px;
+    }
+
+    .right > div:first-child {
+      order: 1;
+    }
+    .right > div:last-child {
+      order: 2;
+    }
+    i {
+      margin-right: 5px;
+    }
+    .button_blog {
+      margin-top: 10px;
+    }
+  }
+  .footer {
+    .form {
+      margin-top: 20px;
+    }
+  }
+}
